force-app/main/default/objects/Requirement__c/Requirement__c.object-meta.xml
<CustomObject>
    <label>Requirement</label>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Requirement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>