force-app/main/default/objects/Requirement__c/fields/Build_Type__c.field-meta.xml
<CustomField>
    <fullName>Build_Type__c</fullName>
    <label>Build Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Configuration &amp; Customization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>