force-app/main/default/objects/Requirement__c/fields/Developed_Components__c.field-meta.xml
<CustomField>
    <fullName>Developed_Components__c</fullName>
    <label>Developed Components</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>