force-app/main/default/objects/Requirement__c/fields/Estimated_Design_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Design_Hours__c</fullName>
    <label>Estimated Design Hours</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>