force-app/main/default/objects/Requirement__c/fields/Estimated_Test_Deploy_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Test_Deploy_Hours__c</fullName>
    <label>Estimated Test/Deploy Hours</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>