force-app/main/default/objects/Requirement__c/fields/Functional_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Functional_Criteria__c</fullName>
    <label>Functional Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>