force-app/main/default/objects/Requirement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Design In-Progress</fullName>
            </value>
            <value>
                <fullName>Design Complete</fullName>
            </value>
            <value>
                <fullName>Build In-Progress</fullName>
            </value>
            <value>
                <fullName>Build Complete</fullName>
            </value>
            <value>
                <fullName>Unit Test In-Progress</fullName>
            </value>
            <value>
                <fullName>Unit Test Complete</fullName>
            </value>
            <value>
                <fullName>Deployed to Production - Inactive</fullName>
            </value>
            <value>
                <fullName>Deployed to Production - Active</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>