force-app/main/default/objects/Requirement__c/fields/Technical_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Technical_Criteria__c</fullName>
    <label>Technical Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>