force-app/main/default/objects/Requirement__c/fields/Total_Estimated_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Work_Hours__c</fullName>
    <formula>Estimated_Design_Hours__c +  Estimated_Build_Hours__c +  Estimated_Test_Deploy_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Work Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>