force-app/main/default/objects/Requirement__c/listViews/All_Requirements.listView-meta.xml
<ListView>
    <fullName>All_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Requirement_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Build_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Requirements</label>
</ListView>